# leah---OBELiX

./: README.md  pyproject.toml  test.csv  train.csv  train_test_split.py
.github/workflows/: python-publish.yml
benchmark/: MLP.py  RF.py  parse.py  tuning.py
benchmark/3d_models/: README.md  filtered_test.csv  filtered_train.csv
benchmark/3d_models/CGCNN/: main.py
benchmark/3d_models/M3GNet/: M3GNet.py  config_m3gnet.yaml
benchmark/3d_models/MatGL/: M3GNet.py  config.yaml  config_m3gnet.yaml  main.py
benchmark/3d_models/PaiNN/: PaiNN.py  config_painn.yaml
classification/: .mlp.py.swp  .~lock.x_train.csv#  MLP.py  RF.py  best_mlp_model.pkl  best_rf_model.pkl  halving_gs_mlp.py  halving_gs_rf.py  parse.py  test_mlp.py  test_rf.py  train_mlp.py  train_rf.py
data/: 20231204.csv  20231204.xlsx  20231204v1.csv  20231204v1_preproc.csv  20231204v1_with_paper_info.csv  20231204v2.csv  20231204v3.csv  20231204v4.csv  20240124.csv  20240124v1.csv  20240124v2.csv  README.md  analysis.py  anonymize_cifs.py  compare_other_databases.py  compare_xlsx.py  compare_xlsx.py~  datavis.ipynb  get_icsd_entries.py  get_paper_number.py  laskowski_semi-fromatted.csv  preproc.ipynb  preprocessing.py  processed.csv  randomize_cifs.py  raw.xlsx  sep_samples.csv  unidentified.txt  unidentified_with_refs.csv
data/downloads/: all.xlsx  test.xlsx  train.xlsx
data/other/: IonicalConductivityDatabase.json  LiIonDatabase.csv  README.md  extract_doi.py
data/scripts/: analysis.py  compare_other_databases.py
obelix/: __init__.py  utils.py
tests/: test_obelix.py
(+14 files in other folders)
